--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6694f1">  <td>21/07/30 00:24:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.Login()[pri:0, instance:mega.automation.AppTest@13eb8acf]">Login</td> 
-  <td>main@2109874862</td>   <td></td> </tr>
-<tr bgcolor="6694f1">  <td>21/07/30 00:24:40</td>   <td>-31</td> <td>&nbsp;</td><td title="&gt;&gt;AppTest.SetUp()[pri:0, instance:mega.automation.AppTest@13eb8acf]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="e88b9c">  <td>21/07/31 10:26:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.CreateAFile()[pri:0, instance:mega.automation.AppTest@66480dd7]">CreateAFile</td> 
+  <td>main@1427810650</td>   <td></td> </tr>
+<tr bgcolor="e88b9c">  <td>21/07/31 10:25:35</td>   <td>-27997</td> <td>&nbsp;</td><td title="&gt;&gt;AppTest.Initialise()[pri:0, instance:mega.automation.AppTest@66480dd7]">&gt;&gt;Initialise</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
+<tr bgcolor="e88b9c">  <td>21/07/31 10:25:53</td>   <td>-9835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppTest.Login()[pri:0, instance:mega.automation.AppTest@66480dd7]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
 </table>
